iptables
# Generated by iptables-save v1.4.7 on Fri May  9 20:18:15 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [794:67886]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 129 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -p tcp -m conntrack --ctstate NEW -m tcp --dport 3306 -j ACCEPT 
-A INPUT -s 172.16.0.0/12 -p tcp -m conntrack --ctstate NEW -m tcp --dport 3306 -j ACCEPT 
-A INPUT -s 10.0.0.0/8 -p tcp -m conntrack --ctstate NEW -m tcp --dport 3306 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Fri May  9 20:18:15 2014
